# CPPBlackJack

./: .gitignore  CMakeLists.txt  CPPBlackJack.cpp  CPPBlackJack.sln  CPPBlackJack.vcxproj  CPPBlackJack.vcxproj.filters  QuickRand.h  card.cpp  card.h  cardpile.cpp  cardpile.h  dealer.cpp  dealer.h  deck.cpp  deck.h  main.cpp  player.cpp  player.h  readme.md  strategies.h  table.cpp  table.h
src/: card.h  cardpile.cpp  cardpile.h  dealer.cpp  dealer.h  main.cpp  player.cpp  player.h  strategies.h  table.cpp  table.h
